# cloudcompare-archeos

./: .gitignore  README.md  cloudcompare-2.6.0.tar.gz.delta  cloudcompare_2.4+git20130310.orig.tar.gz.delta  cloudcompare_2.4+git20130310.orig.tar.gz.id  cloudcompare_2.4+git20130615.orig.tar.gz.delta  cloudcompare_2.4+git20130615.orig.tar.gz.id  cloudcompare_2.4+git8336b3.orig.tar.gz.delta  cloudcompare_2.4+git8336b3.orig.tar.gz.id  cloudcompare_2.4+git85774862592.orig.tar.gz.delta  cloudcompare_2.4+git85774862592.orig.tar.gz.id  cloudcompare_2.4+gitab9c37f.orig.tar.gz.delta  cloudcompare_2.4+gitab9c37f.orig.tar.gz.id  cloudcompare_2.4+gitfaa33637a8.orig.tar.gz.delta  cloudcompare_2.4+gitfaa33637a8.orig.tar.gz.id  cloudcompare_2.5.0.orig.tar.gz.delta  cloudcompare_2.5.0.orig.tar.gz.id  cloudcompare_2.5.1.orig.tar.gz.delta  cloudcompare_2.5.1.orig.tar.gz.id  cloudcompare_2.5.2.orig.tar.gz.delta  cloudcompare_2.5.2.orig.tar.gz.id  cloudcompare_2.5.3.orig.tar.gz.id  cloudcompare_2.5.4.1.orig.tar.gz.delta  cloudcompare_2.5.4.1.orig.tar.gz.id  cloudcompare_2.5.5.orig.tar.gz.delta  cloudcompare_2.5.5.orig.tar.gz.id  cloudcompare_2.5.6~git20140801.orig.tar.gz.id  cloudcompare_2.6.0.orig.tar.gz.id  cloudcompare_2.6.3+git20160304.orig.tar.gz.id  cloudcompare_2.6.3+git20160313.orig.tar.gz.id  cloudcompare_2.6.3.1.orig.tar.gz.id  cloudcompare_2.6.3.orig.tar.gz.id
CC/: CMakeLists.txt
debian/: CloudCompare.desktop  README.debian  ccViewer.desktop  changelog  cloudcompare.doc-base.EX  cloudcompare.docs  cloudcompare.install  (+7 more)
plugins/qKinect/: CMakeLists.txt  ccKinectDlg.h  qKinect.h
(+42 files in other folders)
